Began editing and creating Samyukta index pages.

--- a/03_samyukta/SA_01/index.html
+++ b/03_samyukta/SA_01/index.html
@@ -4,7 +4,7 @@ type: default
 title: 'The Related Discourses | 1. The Aggregates | Contents'
 base: ../../
 previous: ../index.html
-next: ../SA_02/index.html
+next: SA1_1.html
 ---
 <article class="home">
     <h1><a href="../index.html">The Related Discourses</a></h1>
@@ -193,7 +193,7 @@ next: ../SA_02/index.html
         <li>130. <a href="https://suttacentral.net/sa76/en/analayo" target="_blank">Discourse on Desire</a> <span class="links">(Anālayo) [T 99.76]</span></li>
         <li>131. <a href="https://suttacentral.net/sa77/en/analayo" target="_blank">Discourse on Greed</a> <span class="links">(Anālayo) [T 99.77]</span></li>
         <li>132. <a href="https://suttacentral.net/sa78/en/analayo" target="_blank">Discourse on Arising</a> <span class="links">(Anālayo) [T 99.78]</span></li>
-        <li>133. <a href="https://suttacentral.net/sa79/en/analayo" target="_blank">Discourse on Brief Teaching</a> <span class="links">(Anālayo) <span class="links">[T 99.79]</span></li>
+        <li>133. <a href="https://suttacentral.net/sa79/en/analayo" target="_blank">Discourse on Brief Teaching</a> <span class="links">(Anālayo) [T 99.79]</span></li>
         <!--
         <h4>134. Brief Teaching (2) <span class="links">[T 99.79]</span></h4>
         <h4>135. Brief Teaching (3) <span class="links">[T 99.79]</span></h4>
