--- a/03_samyukta/SA_07/index.html
+++ b/03_samyukta/SA_07/index.html
@@ -39,7 +39,7 @@ next: ../SA_12/index.html
     <li>16. Planting a Tree <span class="links">[T 99.613]</span></li>
     <li>17. Planting a Tree <span class="links">[T 99.614]</span></li>
 -->
-    <li>18. <a href="https://suttacentral.net/sa615/en/pierquet" target="_blank">Bhikṣuṇī Residence</a> <span class="links">[T 99.615]</span></li>
+    <li>18. <a href="https://suttacentral.net/sa615/en/pierquet" target="_blank">Bhikṣuṇī Residence</a> <span class="links">(Pierquet) [T 99.615]</span></li>
 <!--
     <li>19. The Realms <span class="links">[T 99.616]</span></li>
     <li>20. Planting a Tree <span class="links">[T 99.617]</span></li>
@@ -47,11 +47,11 @@ next: ../SA_12/index.html
     <li>22. Planting a Tree <span class="links">[T 99.619]</span></li>
 -->
     <li>23. <a href="https://suttacentral.net/sa620/en/pierquet" target="_blank">The Monkey</a> <span class="links">(Pierquet) [T 99.620]</span></li>
-    <li>24. <a href="https://suttacentral.net/sa621/en/pierquet" target="_blank">The Young Monks</a> <span class="links">[T 99.621]</span></li>
+    <li>24. <a href="https://suttacentral.net/sa621/en/pierquet" target="_blank">The Young Monks</a> <span class="links">(Pierquet) [T 99.621]</span></li>
 <!--
     <li>25. Planting a Tree <span class="links">[T 99.622]</span></li>
 -->
-    <li>26. <a href="https://suttacentral.net/sa623/en/pierquet" target="_blank">The World Beauty</a> <span class="links">[T 99.623]</span></li>
+    <li>26. <a href="https://suttacentral.net/sa623/en/pierquet" target="_blank">The World Beauty</a> <span class="links">(Pierquet) [T 99.623]</span></li>
 <!--
     <li>27. Planting a Tree <span class="links">[T 99.624]</span></li>
     <li>28. Planting a Tree <span class="links">[T 99.624]</span></li>
