--- a/03_samyukta/index.html
+++ b/03_samyukta/index.html
@@ -39,7 +39,7 @@ base: ../
 	      <li>Powers <span class="refs">(0/60)</span></li>
 	      <li><a href="SA_12/index.html">Factors of Awakening</a> <span class="refs">(1/67)</span></li>
         <li><a href="SA_13/index.html">The Factors of the Noble Path</a> <span class="refs">(30/114)</span></li>
-        <li>Mindfulness of Breathing <span class="refs">(1/22)</span></li>
+        <li><a href="SA_14/index.html">Mindfulness of Breathing</a> <span class="refs">(1/22)</span></li>
         <li>The Student <span class="refs">(0/32)</span></li>
         <li>Unbroken Faith <span class="refs">(0/29)</span></li>
       </ol>
@@ -71,9 +71,9 @@ base: ../
     </li>
     <li>Part VII: The Teachings by the Tathāgata
       <ol start="34">
-        <li>Radha <span class="refs">(13/133)</span></li>
-    	  <li>Views <span class="refs">(41/93)</span></li>
-        <li>Ending <span class="refs">(17/10,996)</span></li>
+        <li><a href="SA_34/index.html">Rādha</a> <span class="refs">(22/133)</span></li>
+    	  <li><a href="SA_35/index.html">Views</a> <span class="refs">(39/93)</span></li>
+        <li><a href="SA_35/index.html">Ending</a> <span class="refs">(16/10,996)</span></li>
     	  <li>Heaven <span class="refs">(0/48)</span></li>
     	  <li>Realization <span class="refs">(0/70)</span></li>
     	  <li>Sense Bases, Elements, and Aggregates <span class="refs">(0/182)</span></li>
