Added translations of MA 9, 10, 82, and 186.

--- a/02_madhyama/01_First/01_Sevens/index.html
+++ b/02_madhyama/01_First/01_Sevens/index.html
@@ -33,5 +33,16 @@ base: ../../../
 <h3>7. <a href="MA_007.html">Worldly Merit</a> <span class="refs">[<a href="http://dia.dila.edu.tw/pages/Tv01p0427" target="_blank">T&nbsp;26.427c25</a>]</span></h3>
 <p class="synopsis">The Buddha describes the worldly and transcendent merits that can be cultivated by the faithful. The worldly merits come from giving material support and service to the monasteries. The transcendent merits come from seeking to learn the teachings and accepting the precepts.</p>
 
+<!--
+<h3>8. <a href="MA_008.html">Seven Suns</a> <span class="refs">(MN 24: <a href="https://suttacentral.net/???" target="_target"></a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0428" target="_blank">T&nbsp;26.428c7</a>]</span></h3>
+<p class="synopsis"></p>
+-->
+
+<h3>9. <a href="MA_009.html">Seven Chariots</a> <span class="refs">(MN 24: <a href="https://suttacentral.net/mn24" target="_target">Prepared Chariots</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0429" target="_blank">T&nbsp;26.429c28</a>]</span></h3>
+<p class="synopsis">Śāriputra hears a group of monks praise Pūrṇa Maitrāyaniputra and decides he'd like to meet him. An opportunity arises, and Śāriputra pays Pūrṇa a visit and questions him, asking why he practices the Buddha's teaching. Pūrṇa employs the analogy of a series of relay chariots used by King Prasenajit to travel between cities in a single day to explain how a series of principles lead to Nirvāṇa.</p>
+
+<h3>10. <a href="MA_010.html">Ending the Contaminants</a> <span class="refs">(MN 2: <a href="https://suttacentral.net/mn2" target="_blank">All the Defilements</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0431" target="_blank">T&nbsp;26.431c13</a>]</span></h3>
+<p class="synopsis">The Buddha describes seven strategies a renunciant can use to end the three classes of mental contaminants that cause affliction and grief.</p>
+
 <hr/>
 </article>
