--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
@@ -42,5 +42,8 @@ base: ../../../
 <h3>81. <a href="MA_081.html">Mindfulness of Body</a> <span class="refs">(MN 119: <a href="https://suttacentral.net/mn119" target="_blank">Mindfulness of the Body</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0554" target="_blank">T 26.554c12</a>]</span></h3>
 <p class="synopsis">The Buddha gives a description of 18 practices that constitute a monk’s mindfulness of body as well as the benefits that these practices bring.</p>
 
+<h3>82. <a href="MA_082.html">Crickets</a> <span class="refs">(AN 6.60: <a href="https://suttacentral.net/an6.60 target="_blank">With Hatthisāriputta</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0557" target="_blank">T 26.557c17</a>]</span></h3>
+<p class="synopsis">A monk named Citra [Hastisāriputra] causes trouble at a meeting of monks by interrupting the seniors monks and wranging with them. Mahākauṣṭhila was present and rebukes Citra for his behavior. When Citra's friends defend him, Mahākauṣṭhila gives them a teaching about how monks can attain a peaceful state of mind but then lose it because they revert to the desires of the lay life. Citra in the end chooses to return to the lay life.</p>
+
 <hr/>
 </article>
