--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -23,9 +23,9 @@ base: ../
               <li><a href="01_First/01_Sevens/MA_005.html">The Wood Pile Parable</a></li>
               <li><a href="01_First/01_Sevens/MA_006.html">The Good Person’s Departure</a></li>
               <li><a href="01_First/01_Sevens/MA_007.html">Worldly Merit</a></li>
-              <!--  <li>8. Seven Suns</li>
-              <li>9. Seven Chariots</li>
-              <li>10. The End of the Contaminants</li> -->
+              <li>Seven Suns</li>
+              <li><a href="01_First/01_Sevens/MA_009.html">Seven Chariots</a></li>
+              <li><a href="01_First/01_Sevens/MA_010.html">Ending the Contaminants</a></li>
             </ol>
           </li>
         </ol>
@@ -96,7 +96,8 @@ base: ../
               <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_078.html">Brahmā Invites the Buddha</a></li>
               <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_079.html">The Greater Gods</a></li>
               <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.html">The Rough Cloth</a></li>
-              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_081.html"> Mindfulness of Body</a></li>
+              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_081.html">Mindfulness of Body</a></li>
+              <li><a href="02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_082.html">Crickets</a></li>
             </ol>
           </li>
         </ol>
@@ -120,7 +121,7 @@ base: ../
       <ol start="15">
         <li>The Pairs</li>
         <ol start="186">
-          <li><!--<a href="04_Discernment\15_Pairs\MA_186.html">-->Inquiry<!--</a>--></li>
+          <li><a href="04_Discernment\15_Pairs\MA_186.html">Inquiry</a></li>
         </ol>
       </ol>
     </ul>
