--- a/03_samyukta/SA_35/index.html
+++ b/03_samyukta/SA_35/index.html
@@ -3,8 +3,8 @@ layout: default
 type: default
 title: 'The Related Discourses | 35. Views | Contents'
 base: ../../
-previous: ../SA_14/index.html
-next: ../SA_35/index.html
+previous: ../SA_34/index.html
+next: ../index.html
 ---
 <article class="home">
     <h1><a href="../index.html">The Related Discourses</a></h1>
