--- a/03_samyukta/SA_02/index.html
+++ b/03_samyukta/SA_02/index.html
@@ -3,7 +3,7 @@ layout: default
 type: default
 title: 'The Related Discourses | 2. The Sense Bases | Contents'
 base: ../../
-previous: ../SA_01/index.html
+previous: ../SA_01/SA1_10.html
 next: ../SA_03/index.html
 ---
 <article class="home">
