--- a/03_samyukta/SA_11/index.html
+++ b/03_samyukta/SA_11/index.html
@@ -3,6 +3,8 @@ layout: default
 type: default
 title: 'The Related Discourses | 11. Powers | Contents'
 base: ../../
+previous: ../SA_10/index.html
+next: ../SA_12/index.html
 ---
 <article class="home">
     <h1><a href="../index.html">The Related Discourses</a></h1>
@@ -74,5 +76,10 @@ base: ../../
     <h4>59. Planting a Tree <span class="links">[T 99.702]</span></h4>
     <h4>60. Planting a Tree <span class="links">[T 99.703]</span></h4>
 -->
-<hr/>
-</div></article>
+
+</div>
+<div class="footer-nav">
+  {%- if page.previous -%}<h3 class="previous"><a href="{{ page.previous }}">Previous</a></h3>{%- endif -%}
+  {%- if page.next -%}<h3 class="next"><a href="{{ page.next }}">Next</a></h3>{%- endif -%}
+</div>
+</article>
