Added SA4.1; 12.20,21,30,33,34,37; 13.74,75;14.3,17;35.7,40,43,46,49,52,55,58,61,64,67. Updated SA1.1,2;13.25. Various updates to SA indexes to chain them together and added Analayo links to SA 35 index. Checked all next/prev links in SA and MA and fixed them.

--- a/03_samyukta/SA_13/index.html
+++ b/03_samyukta/SA_13/index.html
@@ -3,7 +3,7 @@ layout: default
 type: default
 title: 'The Related Discourses | 13. The Factors of the Noble Path | Contents'
 base: ../../
-previous: ../SA_12/index.html
+previous: ../SA_12/SA12_37.html
 next: SA13_1.html
 ---
 <article class="home">
@@ -88,10 +88,10 @@ next: SA13_1.html
     <li>70. Planting a Tree <span class="links">[T 99.783]</span></li>
     <li>71. Planting a Tree <span class="links">[T 99.783]</span></li>
     <li>72. Planting a Tree <span class="links">[T 99.783]</span></li>
-    <li>73. Planting a Tree <span class="links">[T 99.783]</span></li>
-    <li>74. Planting a Tree <span class="links">[T 99.784]</span></li>
-    <li>75. Planting a Tree <span class="links">[T 99.785]</span></li>
-    <li>76. Planting a Tree <span class="links">[T 99.786]</span></li>
+    <li>73. Planting a Tree <span class="links">[T 99.783]</span></li> -->
+    <li>74. <a href="SA13_74.html">The Eightfold Path</a> <span class="refs">(Patton) [T 99.784]</span></li>
+    <li>75. <a href="SA13_75.html">The Eightfold Path (2)</a> <span class="refs">(Patton) [T 99.785]</span></li>
+    <!--<li>76. Planting a Tree <span class="links">[T 99.786]</span></li>
     <li>77. Planting a Tree <span class="links">[T 99.787]</span></li>
     <li>78. Planting a Tree <span class="links">[T 99.788]</span></li>
     <li>79. Planting a Tree <span class="links">[T 99.788]</span></li>
