--- a/03_samyukta/SA_35/index.html
+++ b/03_samyukta/SA_35/index.html
@@ -15,111 +15,126 @@ next: ../index.html
 <div class="samNdx">
     <hr/>
   <ul class="samyukta">
-    <li>1. <a href="https://suttacentral.net/sa111/en/analayo">Discourse on the Conduit to Becoming</a> <span class="links">(Anālayo) [T 99.111]</span></li>
-    <li>2. <a href="https://suttacentral.net/sa112/en/analayo">Discourse on Penetrative Knowledge</a> <span class="links">(Anālayo) [T 99.112]</span></li>
-    <li>3. <a href="https://suttacentral.net/sa113/en/analayo">Discourse on Eradicating the Dukkha of Bodily Form</a> <span class="links">(Anālayo) [T 99.113]</span></li>
-    <li>4. <a href="https://suttacentral.net/sa114/en/analayo">Discourse on Understanding Dukkha</a> <span class="links">(Anālayo) [T 99.114]</span></li>
-    <li>5. <a href="https://suttacentral.net/sa115/en/analayo">Discourse on Worry and Sorrow</a> <span class="links">(Anālayo) [T 99.115]</span></li>
-    <li>6. <a href="https://suttacentral.net/sa116/en/analayo">Discourse on Viewing as a Self or as Belonging to a Self</a> <span class="links">(Anālayo) [T 99.116]</span></li>
-    <li>7. <a href="https://suttacentral.net/sa117/en/analayo">Discourse on Being with Influxes and Obstructions</a> <span class="links">(Anālayo) [T 99.117]</span></li>
-    <li>8. <a href="https://suttacentral.net/sa118/en/analayo">Discourse on Lust, Hatred, and Delusion</a> <span class="links">(Anālayo) [T 99.118]</span></li>
-    <li>9. <a href="https://suttacentral.net/sa119/en/analayo">Discourse on Desire, Craving, and Delight</a> <span class="links">(Anālayo) [T 99.119]</span></li>
-    <li>10. <a href="https://suttacentral.net/sa120/en/analayo">First Discourse on Māra</a> <span class="links">(Anālayo) [T 99.120]</span></li>
-    <li>11. <a href="https://suttacentral.net/sa121/en/analayo">Discourse on Being of a Mortal Nature</a> <span class="links">(Anālayo) [T 99.121]</span></li>
-    <li>12. <a href="https://suttacentral.net/sa122/en/analayo">Discourse on the Living Being</a> <span class="links">(Anālayo) [T 99.122]</span></li>
-    <li>13. <a href="https://suttacentral.net/sa123/en/analayo">Discourse on Craving, Delight, and Lust</a> <span class="links">(Anālayo) [T 99.123]</span></li>
-    <li>14. <a href="https://suttacentral.net/sa124/en/analayo">Second Discourse on Māra</a> <span class="links">(Anālayo) [T 99.124]</span></li>
-    <li>15. <a href="https://suttacentral.net/sa125/en/analayo">Discourse on What is Made by Māra</a> <span class="links">(Anālayo) [T 99.125]</span></li>
-<!--
-    <li>16. Planting a Tree <span class="links">[T 99.125]</span></li>
--->
-    <li>17. <a href="https://suttacentral.net/sa126/en/analayo">Discourse on Being of a Mortal Nature</a> <span class="links">(Anālayo) [T 99.126]</span></li>
+    <li>1. <a href="https://suttacentral.net/sa133/en/analayo">Discourse on What is the Cause</a> <span class="links">(Anālayo) [T 99.133]</span></li>
+    <li>2. <a href="https://suttacentral.net/sa134/en/analayo">First Discourse on Abandoning Doubt</a> <span class="links">(Anālayo) [T 99.134]</span></li>
+    <li>3. <a href="https://suttacentral.net/sa135/en/analayo">Second Discourse on Abandoning Doubt</a> <span class="links">(Anālayo) [T 99.135]</span></li>
+    <li>4. <a href="https://suttacentral.net/sa136/en/analayo">Discourse on What Matter is the Cause</a> <span class="links">(Anālayo) [T 99.136]</span></li>
+    <li>5. <a href="https://suttacentral.net/sa137/en/analayo">Third Discourse on Abandoning Doubt</a> <span class="links">(Anālayo) [T 99.137]</span></li>
+    <li>6. <a href="https://suttacentral.net/sa138/en/analayo">Fourth Discourse on Abandoning Doubt</a> <span class="links">(Anālayo) [T 99.138]</span></li>
+    <li>7. The Cause of Attachment and Sorrow <span class="links">(<a href="SA35_7.html">Patton</a> | <a href="https://suttacentral.net/sa139/en/analayo">Anālayo</a>) [T 99.139]</span></li>
+    <li>8. <a href="https://suttacentral.net/sa140/en/analayo">Second Discourse on Worry, Sorrow, Vexation, and Pain</a> <span class="links">(Anālayo) [T 99.140]</span></li>
+    <li>9. <a href="https://suttacentral.net/sa141/en/analayo">Third Discourse on Worry, Sorrow, Vexation, and Pain</a> <span class="links">(Anālayo) [T 99.141]</span></li>
+    <li>10. <a href="https://suttacentral.net/sa142/en/analayo">First Discourse on the View of a Self and What Belongs to the Self</a> <span class="links">(Anālayo) [T 99.142]</span></li>
+    <li>11. <a href="https://suttacentral.net/sa143/en/analayo">Second and Third Discourses on the View of a Self and What Belongs to the Self</a> <span class="links">(Anālayo) [T 99.143]</span></li>
+    <li>12. <a href="https://suttacentral.net/sa144/en/analayo">Second and Third Discourses on the View of a Self and What Belongs to the Self</a> <span class="links">(Anālayo) [T 99.144]</span></li>
 
-    <li>18. <a href="https://suttacentral.net/sa127/en/analayo">First Discourse on Being of the Nature to be Abandoned</a> <span class="links">(Anālayo) [T 99.127]</span></li>
-<!--
-    <li>19. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>20. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>21. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>22. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>23. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>24. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>25. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>26. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>27. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>28. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>29. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>30. Planting a Tree <span class="links">[T 99.127]</span></li>
-    <li>31. Planting a Tree <span class="links">[T 99.127]</span></li>
--->
-    <li>32. <a href="https://suttacentral.net/sa128/en/analayo">Second Discourse on Being of the Nature to be Abandoned</a> <span class="links">(Anālayo) [T 99.128]</span></li>
-<!--
-    <li>33. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>34. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>35. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>36. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>37. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>38. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>39. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>40. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>41. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>42. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>43. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>44. Planting a Tree <span class="links">[T 99.128]</span></li>
-    <li>45. Planting a Tree <span class="links">[T 99.128]</span></li>
--->
-    <li>46. <a href="https://suttacentral.net/sa129/en/analayo">Third Discourse on Being of the Nature to be Abandoned</a> <span class="links">(Anālayo) [T 99.129]</span></li>
-<!--
-    <li>47. Planting a Tree <span class="links">[T 99.129]</span></li>
-    <li>48. Planting a Tree <span class="links">[T 99.129]</span></li>
-    <li>49. Planting a Tree <span class="links">[T 99.129]</span></li>
-    <li>50. Planting a Tree <span class="links">[T 99.129]</span></li>
-    <li>51. Planting a Tree <span class="links">[T 99.129]</span></li>
--->
-    <li>52. <a href="https://suttacentral.net/sa130/en/analayo">Discourse on Seeking Out the Great Teacher</a> <span class="links">(Anālayo) [T 99.130]</span></li>
-<!--
-    <li>53. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>54. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>55. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>56. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>57. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>58. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>59. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>60. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>61. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>62. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>63. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>64. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>65. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>66. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>67. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>68. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>69. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>70. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>71. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>72. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>73. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>74. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>75. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>76. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>77. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>78. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>79. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>80. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>81. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>82. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>83. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>84. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>85. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>86. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>87. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>88. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>89. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>90. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>91. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>92. Planting a Tree <span class="links">[T 99.130]</span></li>
-    <li>93. Planting a Tree <span class="links">[T 99.130]</span></li>
--->
+    <li>13. <a href="https://suttacentral.net/sa145/en/analayo">Discourse on the Influxes and the Obstruction of Confusion</a> <span class="links">(Anālayo) [T 99.145]</span></li>
+    <!--<li>14.</li>
+    <li>15.</li>-->
 
+    <li>16. <a href="https://suttacentral.net/sa146/en/analayo">Discourse on the Three Feelings</a> <span class="links">(Anālayo) [T 99.146]</span></li>
+    <!--<li>17.</li>
+    <li>18.</li>-->
+
+    <li>19. <a href="https://suttacentral.net/sa147/en/analayo">Discourse on the Three Types of Dukkha</a> <span class="links">(Anālayo) [T 99.147]</span></li>
+    <!--<li>20.</li>
+    <li>21.</li>-->
+
+    <li>22. <a href="https://suttacentral.net/sa148/en/analayo">Discourse on the Eight Worldly Conditions</a> <span class="links">(Anālayo) [T 99.148]</span></li>
+    <!--<li>23.</li>
+    <li>24.</li>-->
+
+    <li>25. <a href="https://suttacentral.net/sa149/en/analayo">First Discourse on Feeling Superior</a> <span class="links">(Anālayo) [T 99.149]</span></li>
+    <!--<li>26.</li>
+    <li>27.</li>-->
+
+    <li>28. <a href="https://suttacentral.net/sa150/en/analayo">Second Discourse on Feeling Superior</a> <span class="links">(Anālayo) [T 99.150]</span></li>
+    <!--<li>29.</li>
+    <li>30.</li>-->
+
+    <li>31. <a href="https://suttacentral.net/sa151/en/analayo">Third Discourse on Feeling Superior</a> <span class="links">(Anālayo) [T 99.151]</span></li>
+    <!--<li>32.</li>
+    <li>33.</li>-->
+
+    <li>34. <a href="https://suttacentral.net/sa152/en/analayo">Discourse on the View of the Existence of a Self</a> <span class="links">(Anālayo) [T 99.152]</span></li>
+    <!--<li>35.</li>
+    <li>36.</li>-->
+
+    <li>37. <a href="https://suttacentral.net/sa153/en/analayo">Discourse on No Difference</a> <span class="links">(Anālayo) [T 99.153]</span></li>
+    <!--<li>38.</li>
+    <li>39.</li>-->
+
+    <li>40. Wrong View Regarding Actions <span class="links">(<a href="SA35_40.html">Patton</a> | <a href="https://suttacentral.net/sa154/en/analayo">Anālayo</a>) [T 99.154]</span></li>
+    <!--<li>41.</li>
+    <li>42.</li>-->
+
+    <li>43. Wrong View Regarding Personal Ability <span class="links">(<a href="SA35_43.html">Patton</a> | <a href="https://suttacentral.net/sa155/en/analayo">Anālayo</a>) [T 99.155]</span></li>
+    <!--<li>44.</li>
+    <li>45.</li>-->
+
+    <li>46. Wrong View Regarding the Afterlife <span class="links">(<a href="SA35_46.html">Patton</a> | <a href="https://suttacentral.net/sa156/en/analayo">Anālayo</a>) [T 99.156]</span></li>
+    <!--<li>47.</li>
+    <li>48.</li>-->
+
+    <li>49. Wrong View Regarding Affliction <span class="links">(<a href="SA35_49.html">Patton</a> | <a href="https://suttacentral.net/sa157/en/analayo">Anālayo</a>) [T 99.157]</span></li>
+    <!--<li>50.</li>
+    <li>51.</li>-->
+
+    <li>52. Wrong View Regarding Purity <span class="links">(<a href="SA35_52.html">Patton</a> | <a href="https://suttacentral.net/sa158/en/analayo">Anālayo</a>) [T 99.158]</span></li>
+    <!--<li>53.</li>
+    <li>54.</li>-->
+
+    <li>55. Wrong View Regarding the Lack of Knowing and Seeing <span class="links">(<a href="SA35_55.html">Patton</a> | <a href="https://suttacentral.net/sa159/en/analayo">Anālayo</a>) [T 99.159]</span></li>
+    <!--<li>56.</li>
+    <li>57.</li>-->
+
+    <li>58. Wrong View Regarding Knowing and Seeing <span class="links">(<a href="SA35_58.html">Patton</a> | <a href="https://suttacentral.net/sa160/en/analayo">Anālayo</a>) [T 99.160]</span></li>
+    <!--<li>59.</li>
+    <li>60.</li>-->
+
+    <li>61. Wrong View Regarding Actions <span class="links">(<a href="SA35_61.html">Patton</a> | <a href="https://suttacentral.net/sa161/en/analayo">Anālayo</a>) [T 99.161]</span></li>
+    <!--<li>62.</li>
+    <li>63.</li>-->
+
+    <li>64. Wrong View Regarding Actions <span class="links">(<a href="SA35_64.html">Patton</a> | <a href="https://suttacentral.net/sa162/en/analayo">Anālayo</a>) [T 99.162]</span></li>
+    <!--<li>65.</li>
+    <li>66.</li>-->
+
+    <li>67. Wrong View Regarding Rebirth <span class="links">(<a href="SA35_67.html">Patton</a> | <a href="https://suttacentral.net/sa163/en/analayo">Anālayo</a>) [T 99.163]</span></li>
+    <!--<li>68.</li>
+    <li>69.</li>-->
+
+    <li>70. <a href="https://suttacentral.net/sa164/en/analayo">Discourse on the View that Winds do not Blow</a> <span class="links">(Anālayo) [T 99.164]</span></li>
+    <!--<li>71.</li>
+    <li>72.</li>-->
+
+    <li>73. <a href="https://suttacentral.net/sa165/en/analayo">Discourse on the View about Great Brahmā</a> <span class="links">(Anālayo) [T 99.165]</span></li>
+    <!--<li>74.</li>
+    <li>75.</li>-->
+
+    <li>76. <a href="https://suttacentral.net/sa166/en/analayo">First Discourse on the View that the Self Consists of Form</a> <span class="links">(Anālayo) [T 99.166]</span></li>
+    <!--<li>77.</li>
+    <li>78.</li>-->
+
+    <li>79. <a href="https://suttacentral.net/sa167/en/analayo">Second Discourse on the View about the Self Consisting of Form</a> <span class="links">(Anālayo) [T 99.167]</span></li>
+    <!--<li>80.</li>
+    <li>81.</li>-->
+
+    <li>82. <a href="https://suttacentral.net/sa168/en/analayo">Discourse on the View that the World is Eternal</a> <span class="links">(Anālayo) [T 99.168]</span></li>
+    <!--<li>83.</li>
+    <li>84.</li>-->
+
+    <li>85. <a href="https://suttacentral.net/sa169/en/analayo">Discourse on the View that the Self and the World are Eternal</a> <span class="links">(Anālayo) [T 99.169]</span></li>
+    <!--<li>86.</li>
+    <li>87.</li>-->
+
+    <li>88. <a href="https://suttacentral.net/sa170/en/analayo">Discourse on Views about Nirvāṇa Here and Now</a> <span class="links">(Anālayo) [T 99.170]</span></li>
+    <!--<li>89.</li>
+    <li>90.</li>-->
+
+    <li>91. <a href="https://suttacentral.net/sa171/en/analayo">Discourse on Views about Annihilation</a> <span class="links">(Anālayo) [T 99.171]</span></li>
+    <!--<li>92.</li>
+    <li>93.</li>-->
 <hr/>
   </ul>
 </div>
