--- a/03_samyukta/SA_04/index.html
+++ b/03_samyukta/SA_04/index.html
@@ -4,7 +4,7 @@ type: default
 title: 'The Related Discourses | 4. Truths | Contents'
 base: ../../
 previous: ../SA_03/index.html
-next: ../SA_05/index.html
+next: SA4_1.html
 ---
 <article class="home">
     <h1><a href="../index.html">The Related Discourses</a></h1>
@@ -15,7 +15,7 @@ next: ../SA_05/index.html
 <div class="samNdx">
     <hr/>
   <ul class="samyukta">
-    <li>1. <a href="https://suttacentral.net/sa379/en/pierquet" target="_blank">Turning the Dharma Wheel</a> <span class="links">(Pierquet) [T 99.379]</span></li>
+    <li>1. Turning the Dharma Wheel <span class="links">(<a href="SA12_1.html">Patton</a> | <a href="https://suttacentral.net/sa379/en/pierquet" target="_blank">Pierquet</a>) [T 99.379]</span></li>
 <!--
     <li>2. Planting a Tree <span class="links">[T 99.380]</span></li>
     <li>3. Planting a Tree <span class="links">[T 99.381]</span></li>
