--- a/03_samyukta/SA_05/index.html
+++ b/03_samyukta/SA_05/index.html
@@ -3,7 +3,7 @@ layout: default
 type: default
 title: 'The Related Discourses | 5. Elements | Contents'
 base: ../../
-previous: ../SA_04/index.html
+previous: ../SA_04/SA4_1.html
 next: ../SA_06/index.html
 ---
 <article class="home">
