--- a/03_samyukta/SA_12/index.html
+++ b/03_samyukta/SA_12/index.html
@@ -4,7 +4,7 @@ type: default
 title: 'The Related Discourses | 12. Factors of Awakening | Contents'
 base: ../../
 previous: ../SA_11/index.html
-next: ../SA_13/index.html
+next: SA12_20.html
 ---
 <article class="home">
     <h1><a href="../index.html">The Related Discourses</a></h1>
@@ -34,26 +34,26 @@ next: ../SA_13/index.html
     <li>16. Planting a Tree <span class="links">[T 99.719]</span></li>
     <li>17. Planting a Tree <span class="links">[T 99.720]</span></li>
     <li>18. Planting a Tree <span class="links">[T 99.721]</span></li>
-    <li>19. Planting a Tree <span class="links">[T 99.722]</span></li>
-    <li>20. Planting a Tree <span class="links">[T 99.723]</span></li>
-    <li>21. Planting a Tree <span class="links">[T 99.724]</span></li>
-    <li>22. Planting a Tree <span class="links">[T 99.725]</span></li>
+    <li>19. Planting a Tree <span class="links">[T 99.722]</span></li> -->
+    <li>20. <a href="SA12_20.html">Junior Monks</a> <span class="links">(Patton) [T 99.723]</span></li>
+    <li>21. <a href="SA12_21.html">Fruitful Monks</a> <span class="links">(Patton) [T 99.724]</span></li>
+    <!--<li>22. Planting a Tree <span class="links">[T 99.725]</span></li>
     <li>23. Planting a Tree <span class="links">[T 99.726]</span></li>
     <li>24. Planting a Tree <span class="links">[T 99.727]</span></li>
     <li>25. Planting a Tree <span class="links">[T 99.728]</span></li>
     <li>26. Planting a Tree <span class="links">[T 99.729]</span></li>
     <li>27. Planting a Tree <span class="links">[T 99.730]</span></li>
     <li>28. Planting a Tree <span class="links">[T 99.731]</span></li>
-    <li>29. Planting a Tree <span class="links">[T 99.732]</span></li>
-    <li>30. Planting a Tree <span class="links">[T 99.733]</span></li>
-    <li>31. Planting a Tree <span class="links">[T 99.734]</span></li>
-    <li>32. Planting a Tree <span class="links">[T 99.735]</span></li>
-    <li>33. Planting a Tree <span class="links">[T 99.736]</span></li>
-    <li>34. Planting a Tree <span class="links">[T 99.737]</span></li>
-    <li>35. Planting a Tree <span class="links">[T 99.738]</span></li>
-    <li>36. Planting a Tree <span class="links">[T 99.739]</span></li>
-    <li>37. Planting a Tree <span class="links">[T 99.740]</span></li>
-    <li>38. Planting a Tree <span class="links">[T 99.741]</span></li>
+    <li>29. Planting a Tree <span class="links">[T 99.732]</span></li> -->
+    <li>30. <a href="SA12_30.html">A Certain Monk</a> <span class="links">(Patton) [T 99.733]</span></li>
+    <!-- <li>31. Planting a Tree <span class="links">[T 99.734]</span></li>
+    <li>32. Planting a Tree <span class="links">[T 99.735]</span></li> -->
+    <li>33. <a href="SA12_33.html">Seven Fruits</a> <span class="links">(Patton) [T 99.736]</span></li>
+    <li>34. <a href="SA12_34.html">Abodes of Mindfulness</a> <span class="links">(Patton) [T 99.737]</span></li>
+    <!-- <li>35. Planting a Tree <span class="links">[T 99.738]</span></li>
+    <li>36. Planting a Tree <span class="links">[T 99.739]</span></li> -->
+    <li>37. <a href="SA12_37.html">Seven Fruits</a> <span class="links">(Patton) [T 99.740]</span></li>
+    <!-- <li>38. Planting a Tree <span class="links">[T 99.741]</span></li>
     <li>39. Planting a Tree <span class="links">[T 99.742]</span></li>
     <li>40. Planting a Tree <span class="links">[T 99.743]</span></li>
     <li>41. Planting a Tree <span class="links">[T 99.744]</span></li>
