--- a/03_samyukta/SA_14/index.html
+++ b/03_samyukta/SA_14/index.html
@@ -3,8 +3,8 @@ layout: default
 type: default
 title: 'The Related Discourses | 14. Mindfulness of Breathing | Contents'
 base: ../../
-previous: ../SA_13/index.html
-next: ../SA_34/index.html
+previous: ../SA_13/SA13_75.html
+next: SA14_3.html
 ---
 <article class="home">
     <h1><a href="../index.html">The Related Discourses</a></h1>
@@ -17,27 +17,27 @@ next: ../SA_34/index.html
   <ul class="samyukta">
     <li>1. <a href="https://suttacentral.net/sa801/en/pierquet">Qualities Supporting Mindfulness of Breathing</a> <span class="links">(Pierquet) [T 99.801]</span></li>
 <!--
-    <li>2. Planting a Tree <span class="links">[T 99.705]</span></li>
-    <li>3. Planting a Tree <span class="links">[T 99.706]</span></li>
-    <li>4. Planting a Tree <span class="links">[T 99.707]</span></li>
-    <li>5. Planting a Tree <span class="links">[T 99.708]</span></li>
-    <li>6. Planting a Tree <span class="links">[T 99.709]</span></li>
-    <li>7. Planting a Tree <span class="links">[T 99.710]</span></li>
-    <li>8. Planting a Tree <span class="links">[T 99.711]</span></li>
-    <li>9. Planting a Tree <span class="links">[T 99.712]</span></li>
-    <li>10. Planting a Tree <span class="links">[T 99.713]</span></li>
-    <li>11. Planting a Tree <span class="links">[T 99.714]</span></li>
-    <li>12. Planting a Tree <span class="links">[T 99.715]</span></li>
-    <li>13. Planting a Tree <span class="links">[T 99.716]</span></li>
-    <li>14. Planting a Tree <span class="links">[T 99.717]</span></li>
-    <li>15. Planting a Tree <span class="links">[T 99.718]</span></li>
-    <li>16. Planting a Tree <span class="links">[T 99.719]</span></li>
-    <li>17. Planting a Tree <span class="links">[T 99.720]</span></li>
-    <li>18. Planting a Tree <span class="links">[T 99.721]</span></li>
-    <li>19. Planting a Tree <span class="links">[T 99.722]</span></li>
-    <li>20. Planting a Tree <span class="links">[T 99.723]</span></li>
-    <li>21. Planting a Tree <span class="links">[T 99.724]</span></li>
-    <li>22. Planting a Tree <span class="links">[T 99.725]</span></li>
+    <li>2. Planting a Tree <span class="links">[T 99.802]</span></li> -->
+    <li>3. <a href="SA14_3.html">Cultivating Mindfulness of Breathing</a> <span class="links">(Patton) [T 99.803]</span></li>
+    <!--<li>4. Planting a Tree <span class="links">[T 99.804]</span></li>
+    <li>5. Planting a Tree <span class="links">[T 99.804]</span></li>
+    <li>6. Planting a Tree <span class="links">[T 99.804]</span></li>
+    <li>7. Planting a Tree <span class="links">[T 99.804]</span></li>
+    <li>8. Planting a Tree <span class="links">[T 99.804]</span></li>
+    <li>9. Planting a Tree <span class="links">[T 99.804]</span></li>
+    <li>10. Planting a Tree <span class="links">[T 99.804]</span></li>
+    <li>11. Planting a Tree <span class="links">[T 99.804]</span></li>
+    <li>12. Planting a Tree <span class="links">[T 99.805]</span></li>
+    <li>13. Planting a Tree <span class="links">[T 99.806]</span></li>
+    <li>14. Planting a Tree <span class="links">[T 99.807]</span></li>
+    <li>15. Planting a Tree <span class="links">[T 99.808]</span></li>
+    <li>16. Planting a Tree <span class="links">[T 99.809]</span></li>-->
+    <li>17. <a href="SA14_17.html">Attaining Four, Seven, and Two Things</a> <span class="links">(Patton) [T 99.810]</span></li>
+    <!--<li>18. Planting a Tree <span class="links">[T 99.811]</span></li>
+    <li>19. Planting a Tree <span class="links">[T 99.812]</span></li>
+    <li>20. Planting a Tree <span class="links">[T 99.813]</span></li>
+    <li>21. Planting a Tree <span class="links">[T 99.814]</span></li>
+    <li>22. Planting a Tree <span class="links">[T 99.815]</span></li>
 -->
 <hr/>
   </ul>
