--- a/whats-new.html
+++ b/whats-new.html
@@ -6,11 +6,33 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <dl class="whats-new">
-  <dt>23-July-2020</dt>
+  <dt>24-July-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="02_madhyama/01_First/02_Related_To_Action/MA_011.html">MĀ 11 The Rock Salt Parable</a></dd>
     <dd><a href="02_madhyama/01_First/03_Related_To_Sariputra/MA_031.html">MĀ 31 Discernment of the Noble Truths</a></dd>
     <dd><a href="02_madhyama/02_Lesser_Lands_and_Cities/09_Cause/MA_098.html">MĀ 98 The Abodes of Mindfulness</a></dd>
+    <dd><a href="03_samyukta/SA_4/SA4_1.html">SĀ 4.1 Turning the Dharma Wheel</a></dd>
+    <dd><a href="03_samyukta/SA_12/SA12_20.html">SĀ 12.20 Junior Monks</a></dd>
+    <dd><a href="03_samyukta/SA_12/SA12_21.html">SĀ 12.21 Fruitful Monks</a></dd>
+    <dd><a href="03_samyukta/SA_12/SA12_30.html">SĀ 12.30 A Certain Monk</a></dd>
+    <dd><a href="03_samyukta/SA_12/SA12_33.html">SĀ 12.33 Seven Fruits</a></dd>
+    <dd><a href="03_samyukta/SA_12/SA12_34.html">SĀ 12.34 Abodes of Mindfulness</a></dd>
+    <dd><a href="03_samyukta/SA_12/SA12_37.html">SĀ 12.37 Seven Fruits</a></dd>
+    <dd><a href="03_samyukta/SA_13/SA13_74.html">SĀ 13.74 The Eightfold Path</a></dd>
+    <dd><a href="03_samyukta/SA_13/SA13_75.html">SĀ 13.75 The Eightfold Path (2)</a></dd>
+    <dd><a href="03_samyukta/SA_13/SA14_3.html">SĀ 14.3 Cultivating Mindfulness of Breathing</a></dd>
+    <dd><a href="03_samyukta/SA_13/SA14_17.html">SĀ 14.17 Attaining Four, Seven, and Two Things</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_7.html">SĀ 35.7 The Cause of Attachment and Sorrow</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_40.html">SĀ 35.40 Wrong View Regarding Actions</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_43.html">SĀ 35.43 Wrong View Regarding Personal Ability</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_46.html">SĀ 35.46 Wrong View Regarding the Afterlife</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_49.html">SĀ 35.49 Wrong View Regarding Affliction</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_52.html">SĀ 35.52 Wrong View Regarding Purity</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_55.html">SĀ 35.55 Wrong View Regarding the Lack of Knowing and Seeing</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_58.html">SĀ 35.58 Wrong View Regarding Knowing and Seeing</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_61.html">SĀ 35.61 Wrong View Regarding Actions</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_64.html">SĀ 35.64 Wrong View Regarding Actions</a></dd>
+    <dd><a href="03_samyukta/SA_35/SA35_67.html">SĀ 35.67 Wrong View Regarding Rebirth</a></dd>
   <dt>22-July-2020</dt>
     <dd>Added translation of <a href="02_madhyama/01_First/02_Related_To_Action/MA_016.html">MĀ 16 The Kālāmas</a></dd>
   <dt>30-June-2020</dt>
