--- a/02_madhyama/01_First/05_Related_To_Cultivation/index.html
+++ b/02_madhyama/01_First/05_Related_To_Cultivation/index.html
@@ -3,6 +3,8 @@ layout: default
 type: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | Contents'
 base: ../../../
+previous: ../03_Related_To_Sariputra/MA_031.html
+next: MA_042.html
 ---
 <article class="home">
 <h1><a href="../../index.html">The Medium Discourses</a></h1>
@@ -42,3 +44,9 @@ base: ../../../
 
 <h3>51. <a href="MA_051.html">The Origin</a> <span class="refs">(AN 10.62: <a href="https://suttacentral.net/an10.62" target="_blank">Craving</a>) [<a href="http://dia.dila.edu.tw/pages/Tv01p0487" target="_blank">T 26.487b4</a>]</span></h3>
 <p class="synopsis">The Buddha explains that while the craving for existence doesn’t have a clear beginning in the past, it does have a clear chain of dependent origination that maintains it.</p>
+<hr/>
+<div class="footer-nav">
+  {%- if page.previous -%}<h3 class="previous"><a href="{{ page.previous }}">Previous</a></h3>{%- endif -%}
+  {%- if page.next -%}<h3 class="next"><a href="{{ page.next }}">Next</a></h3>{%- endif -%}
+</div>
+</article>
