--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
@@ -3,6 +3,8 @@ layout: default
 type: default
 title: 'The Medium Discourses | Chapter 7: King Dirghayu | Contents'
 base: ../../../
+previous: ../../01_First/05_Related_To_Cultivation/MA_051.html
+next: MA_072.html
 ---
 <article class="home">
 <h1><a href="../../index.html">The Medium Discourses</a></h1>
@@ -46,4 +48,8 @@ base: ../../../
 <p class="synopsis">A monk named Citra [Hastisāriputra] causes trouble at a meeting of monks by interrupting the seniors monks and wranging with them. Mahākauṣṭhila was present and rebukes Citra for his behavior. When Citra's friends defend him, Mahākauṣṭhila gives them a teaching about how monks can attain a peaceful state of mind but then lose it because they revert to the desires of the lay life. Citra in the end chooses to return to the lay life.</p>
 
 <hr/>
+<div class="footer-nav">
+  {%- if page.previous -%}<h3 class="previous"><a href="{{ page.previous }}">Previous</a></h3>{%- endif -%}
+  {%- if page.next -%}<h3 class="next"><a href="{{ page.next }}">Next</a></h3>{%- endif -%}
+</div>
 </article>
