--- a/03_samyukta/SA_13/SA13_1.html
+++ b/03_samyukta/SA_13/SA13_1.html
@@ -3,6 +3,6 @@ layout: default
 type: translation
 en: SA_13_1_en
 base: ../../
-previous: contents.html
+previous: index.html
 next: SA13_2.html
 ---
