--- a/02_madhyama/index.html
+++ b/02_madhyama/index.html
@@ -36,7 +36,7 @@ base: ../
               <li>Rāhula</li>
               <li>Intention</li>
               <li><a href="01_First/02_Related_To_Action/MA_016.html">The Kālāmas</a></li>
-              <li>[Gamini]</li>
+              <li><a href="01_First/02_Related_To_Action/MA_017.html">Gāminī</a></li>
               <li>The Lion</li>
               <li>Nirgrantha</li>
               <li>[Pāṭali]</li>
