--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <dl class="whats-new">
+  <dt>27-July-2020</dt>
+    <dd><a href="02_madhyama/01_First/02_Related_To_Action/MA_017.html">MĀ 17 Gāminī</a></dd>
   <dt>24-July-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="02_madhyama/01_First/02_Related_To_Action/MA_011.html">MĀ 11 The Rock Salt Parable</a></dd>
