Added EA 12.1, 19.2, 43.7, and DA 27.

--- a/translations.html
+++ b/translations.html
@@ -11,7 +11,7 @@ title: Dharma Pearls | Translations
     <li><a class="title" href="01_dirgha/">The Long Discourses</a> (Skt. <em>Dīrgha-āgama</em>)</li>
     <li><a class="title" href="02_madhyama/">The Medium Discourses</a> (Skt. <em>Madhyama-āgama</em>)</li>
     <li><a class="title" href="03_samyukta/">The Related Discourses</a> (Skt. <em>Saṃyukta-āgama</em>)</li>
-    <li><strong>The Numerical Discourses</strong> (Skt. <em>Ekottarika-āgama</em>)</li>
+    <li><a class="title" href="04_ekottarika/">The Numerical Discourses</a> (Skt. <em>Ekottarika-āgama</em>)</li>
     <li><strong>Past Events</strong> (Skt. <em>Itivṛttaka</em>)</li>
     <li><strong>Dharma Verses</strong> (Skt. <em>Dharmapāda</em>)</li>
     <li><strong>Illuminations</strong> (A collection of <em>udānas</em> with illustrative stories)</li>
