--- a/04_ekottarika/index.html
+++ b/04_ekottarika/index.html
@@ -4,17 +4,18 @@ type: default
 title: The Numerical Discourses | Contents
 base: ../
 ---
-<article>
-  <h2>Contents</h2>
-  <ul class="toc">
-    <li>Introduction</li>
-    <li>The Numerical Discourses</li>
+<article class="home">
+  <h1>The Numerical Discourses</h1>
+  <h4>(Skt. Ekottarika Āgama; Ch. <span class="ch">增壹阿含</span>)</h4>
+  <p>The <em>Numerical Discourses</em> is a collection of Āgama sutras that was translated to Chinese by Dharmanandi and edited by a team headed by Gautama Saṃghadeva. The exact date of translation is unclear, but the text itself retains the older style of translators prior to Gautama Saṃghadeva’s translation of the <em>Medium Discourses</em>.</p>
+  <p>The <em>Numerical Discourses</em> collection is controversial because it contains a number of passages of clearly Mahāyāna  inspiration, yet it also represents an early canonical tradition that doesn’t align with the Theravāda or Sarvâstivāda. As such, it appears to be a piece of another tradition that offers an alternative glimpse of early Buddhist texts in India.</p>
+  <p>Like the Theravāda <em>Aṅguttara Nikāya</em>, the <em>Numerical Discourses</em> is arranged in a numerical order starting with topics with one item and ending with topics with eleven items. The sutras are arranged in 52 chapters.</p>
+  <p>Below is a list of translated sutras from the <em>The Numerical Discourses</em> that are currently available.</p>
+  <hr/>
+  <div class="madNdx">
     <ul class="toc">
-      <li>Preface</li>
-      <li>Chapter 1: Introduction
-        <ol start="1">
-        </ol>
-      </li>
+      <!--
+      <li>Chapter 1: Introduction</li>
       <li>Chapter 2: Ten Mindfulnesses</li>
       <li>Chapter 3: Broad Discourses</li>
       <li>Chapter 4: Disciples</li>
@@ -25,14 +26,24 @@ base: ../
       <li>Chapter 9: Single Son</li>
       <li>Chapter 10: Guarding Mind</li>
       <li>Chapter 11: Not Obtaining</li>
-      <li>Chapter 12: Incremental Entry to the Path</li>
+      -->
+      <li>Chapter 12: One Entry to the Path</li>
+      <ul class="toc">
+        <li>1. <a href="EA_12_01.html">The Four Stations of Mind</a></li>
+      </ul>
+      <!--
       <li>Chapter 13: Profit</li>
       <li>Chapter 14: Five Precepts</li>
       <li>Chapter 15: Being and Non-Being</li>
       <li>Chapter 16: Fire Extinguished</li>
       <li>Chapter 17: Mindfulness of Breath</li>
       <li>Chapter 18: Shame and Conscience</li>
-      <li>Chapter 19: Exhortation</li>
+      -->
+      <li>Chapter 19: Making a Request</li>
+      <ul class="toc">
+        <li>2. <a href="EA_19_02.html">Two Extremes</a></li>
+      </ul>
+      <!--
       <li>Chapter 20: Good Fiend</li>
       <li>Chapter 21: Three Treasures</li>
       <li>Chapter 22: Three Offerings</li>
@@ -56,7 +67,12 @@ base: ../
       <li>Chapter 40: Seven Days</li>
       <li>Chapter 41: Don't Fear</li>
       <li>Chapter 42: Eight Troubles</li>
-      <li>Chapter 43: The Godling [Horse Blood]</li>
+      -->
+      <li>Chapter 43: The God [Rohitassa]</li>
+      <ul class="toc">
+        <li>7. <a href="EA_43_07.html">The Fruits of the Ascetics</a></li>
+      </ul>
+      <!--
       <li>Chapter 44: Nine Dwellings of Sentient Beings</li>
       <li>Chapter 45: Horse King</li>
       <li>Chapter 46: Compiled Rules</li>
@@ -66,7 +82,8 @@ base: ../
       <li>Chapter 50: Bowing to the Three Treasures</li>
       <li>Chapter 51: Not Permanent</li>
       <li>Chapter 52: Great and Kind Path to Parinirvāṇa</li>
+      -->
     </ul>
-    </li>
-  </ul>
+
+  </div>
 </article>
