--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,12 @@ title: Dharma Pearls | What's New
 <article class="home">
 <h1>What's New</h1>
 <dl class="whats-new">
+  <dt>5-Aug-2020</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_dirgha/DA_27.html">DĀ 27 The Fruits of the Ascetics</a></dd>
+    <dd><a href="04_ekottarika/EA_12_01.html">EĀ 12.1 The Four Stations of Mind</a></dd>
+    <dd><a href="04_ekottarika/EA_19_02.html">EĀ 19.2 Two Extremes</a></dd>
+    <dd><a href="04_ekottarika/EA_43_07.html">EĀ 43.7 The Fruits of the Ascetics</a></dd>
   <dt>27-July-2020</dt>
     <dd><a href="02_madhyama/01_First/02_Related_To_Action/MA_017.html">MĀ 17 Gāminī</a></dd>
   <dt>24-July-2020</dt>
