--- a/04_ekottarika/index.html
+++ b/04_ekottarika/index.html
@@ -29,7 +29,7 @@ base: ../
       -->
       <li>Chapter 12: One Entry to the Path</li>
       <ul class="toc">
-        <li>1. <a href="EA_12_01.html">The Four Stations of Mind</a></li>
+        <li>1. <a href="EA_12_01.html">The Four Stations of Mindfulness</a></li>
       </ul>
       <!--
       <li>Chapter 13: Profit</li>
@@ -41,7 +41,7 @@ base: ../
       -->
       <li>Chapter 19: Making a Request</li>
       <ul class="toc">
-        <li>2. <a href="EA_19_02.html">Two Extremes</a></li>
+        <li>2. <a href="EA_19_02.html">Two Things</a></li>
       </ul>
       <!--
       <li>Chapter 20: Good Fiend</li>
