--- a/03_samyukta/index.html
+++ b/03_samyukta/index.html
@@ -93,6 +93,7 @@ base: ../
     </li>
     <li>Alternate Translations</li>
       <ul>
+        <li><a href="alternates/T102.html">T102 The Five Aggregates Are Empty Sutra</a> (Yijing, 710 CE)</li>
         <li><a href="alternates/T109.html">T109 Turning the Dharma Wheel Sutra</a> (Unknown provenance)</li>
       </ul>
 </ul>
