--- a/whats-new.html
+++ b/whats-new.html
@@ -10,7 +10,7 @@ title: Dharma Pearls | What's New
     <dd>Translations added:</dd>
     <dd><a href="03_samyukta/SA_01/SA1_145.html">SĀ 1.145 The Aggregates Are Not Self</a></dd>
     <dd><a href="03_samyukta/SA_01/SA1_146.html">SĀ 1.146 The Aggregates Are Not Self (2)</a></dd>
-    <dd><a href="03_samyukta/SA_01/SA1_147.html">SA 1.147 Three upright Men</a></dd>
+    <dd><a href="03_samyukta/SA_01/SA1_147.html">SĀ 1.147 Three upright Men</a></dd>
     <dd><a href="03_samyukta/alternates/T102.html">T102 The Five Aggregates Are Empty</a></dd>
   <dt>27-Aug-2020</dt>
     <dd>Translation of <a href="03_samyukta/alternates/T109.html">T109 Turning the Dharma Wheel Sutra</a> added</dd>
