--- a/whats-new.html
+++ b/whats-new.html
@@ -1,11 +1,16 @@
 ---
 layout: default
 type: home
-title: Dharma Pearls | What's New
+title: Dharma Pearls | What’s New
 ---
 <article class="home">
-<h1>What's New</h1>
+<h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>29-Aug-2020</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="03_samyukta/SA_01/SA1_148.html">SĀ 1.148 Sixteen Monks</a></dd>
+    <dd><a href="03_samyukta/SA_01/SA1_149.html">SĀ 1.149 Myself</a></dd>
+    <dd><a href="03_samyukta/alternates/T110.html">T110 The Three Turnings of the Dharma Wheel</a></dd>
   <dt>28-Aug-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="03_samyukta/SA_01/SA1_145.html">SĀ 1.145 The Aggregates Are Not Self</a></dd>
