Added link to SA 36 to SA contents page.

--- a/03_samyukta/index.html
+++ b/03_samyukta/index.html
@@ -73,7 +73,7 @@ base: ../
       <ol start="34">
         <li><a href="SA_34/index.html">Rādha</a> <span class="refs">(22/133)</span></li>
     	  <li><a href="SA_35/index.html">Views</a> <span class="refs">(39/93)</span></li>
-        <li>Ending <span class="refs">(16/10,996)</span></li>
+        <li><a href="SA_36/index.html">Ending</a> <span class="refs">(16/10,996)</span></li>
     	  <li>Heaven <span class="refs">(0/48)</span></li>
     	  <li>Realization <span class="refs">(0/70)</span></li>
     	  <li>Sense Bases, Elements, and Aggregates <span class="refs">(0/182)</span></li>
