--- a/03_samyukta/index.html
+++ b/03_samyukta/index.html
@@ -93,9 +93,11 @@ base: ../
     </li>
     <li>Alternate Translations</li>
       <ul>
-        <li><a href="alternates/T102.html">T102 The Five Aggregates Are Empty Sutra</a> (Yijing, 710 CE)</li>
-        <li><a href="alternates/T109.html">T109 Turning the Dharma Wheel Sutra</a> (Unknown provenance)</li>
-        <li><a href="alternates/T110.html">T110 The Three Turnings of the Dharma Wheel Sutra</a> (Yijing, 710 CE)</li>
+        <li><a href="alternates/T101_15.html">T101, Sūtra 15</a></li>
+        <li><a href="alternates/T102.html">T102 The Five Aggregates Are Empty Sūtra</a> (Yijing, 710 CE)</li>
+        <li><a href="alternates/T109.html">T109 Turning the Dharma Wheel Sūtra</a> (Unknown provenance)</li>
+        <li><a href="alternates/T110.html">T110 The Three Turnings of the Dharma Wheel Sūtra</a> (Yijing, 710 CE)</li>
+        <li><a href="alternates/T112.html">T110 The Eightfold Right Path Sūtra</a> (Anshigao, ~148-168 CE)</li>
       </ul>
 </ul>
 </article>
