--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>31-Aug-2020</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="03_samyukta/alternates/T112.html">T112 The Eightfold Right Path</a></dd>
+    <dd><a href="03_samyukta/alternates/T101_15.html">T101, Sūtra 15</a></dd>
   <dt>29-Aug-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="03_samyukta/SA_01/SA1_148.html">SĀ 1.148 Sixteen Monks</a></dd>
