--- a/03_samyukta/SA_01/index.html
+++ b/03_samyukta/SA_01/index.html
@@ -21,7 +21,7 @@ next: SA1_1.html
         <li>2. Painful <span class="links">(<a href="SA1_2.html">Patton</a>) [T 99.1]</span></li>
         <li>3. Empty <span class="links">(<a href="SA1_3.html">Patton</a>) [T 99.1]</span></li>
         <li>4. Not Self <span class="links">(<a href="SA1_4.html">Patton</a>) [T 99.1]</span></li>
-        <li>5. Rightly Considered <span class="links">(<a href="SA1_5.html">Patton</a> | <a href="https://suttacentral.net/sa2/en/analayo" target="_blank">Anālayo</a>) [T 99.2]</span></li>
+        <li>5. Correctly Contemplated <span class="links">(<a href="SA1_5.html">Patton</a> | <a href="https://suttacentral.net/sa2/en/analayo" target="_blank">Anālayo</a>) [T 99.2]</span></li>
         <li>6. Not Knowing <span class="links">(<a href="SA1_6.html">Patton</a> | <a href="https://suttacentral.net/sa3/en/analayo" target="_blank">Anālayo</a>) [T 99.3]</span></li>
         <li>7. Not Knowing (2) <span class="links">(<a href="SA1_7.html">Patton</a> | <a href="https://suttacentral.net/sa4/en/analayo" target="_blank">Anālayo</a>) [T 99.4]</span></li>
         <li>8. Not Knowing (3) <span class="links">(<a href="SA1_8.html">Patton</a> | <a href="https://suttacentral.net/sa5/en/analayo" target="_blank">Anālayo</a>) [T 99.5]</span></li>
