--- a/03_samyukta/SA_01/index.html
+++ b/03_samyukta/SA_01/index.html
@@ -31,13 +31,11 @@ next: SA1_1.html
     </li>
     <li>ii.
       <ul>
-        <li>11. <a href="https://suttacentral.net/sa8/en/analayo" target="_blank">Discourse on the Past</a> <span class="links">(Anālayo) [T 99.8]</span></li>
-<!--
-    <h4>12. Painful in Past, Future, and Present <span class="links">[T 99.8]</span></h4>
-    <h4>13. Empty in Past, Future, and Present <span class="links">[T 99.8]</span></h4>
-    <h4>14. Not Self in Past, Future, and Present <span class="links">[T 99.8]</span></h4>
--->
-        <li>15. <a href="https://suttacentral.net/sa9/en/analayo" target="_blank">Discourse on Disenchantment</a> <span class="links">(Anālayo) [T 99.9]</span></li>
+        <li>11. Past <span class="links">(<a href="SA1_11.html">Patton</a> | <a href="https://suttacentral.net/sa8/en/analayo" target="_blank">Anālayo</a>) [T 99.8]</span></li>
+        <li>12. <a href="SA1_11.html">Past (2)</a> <span class="links">(Patton) [T 99.8]</span></li>
+        <li>13. <a href="SA1_11.html">Past (3)</a> <span class="links">(Patton) [T 99.8]</span></li>
+        <li>14. <a href="SA1_11.html">Past (4)</a> <span class="links">(Patton) [T 99.8]</span></li>
+        <li>15. Teaching Disillusionment <span class="links">(<a href="SA1_15.html">Patton</a> | <a href="https://suttacentral.net/sa9/en/analayo" target="_blank">Anālayo</a>) [T 99.9]</span></li>
         <li>16. <a href="https://suttacentral.net/sa10/en/analayo" target="_blank">Discourse on Being Liberated</a> <span class="links">(Anālayo) [T 99.10]</span></li>
         <li>17. <a href="https://suttacentral.net/sa11/en/analayo" target="_blank">First Discourse on Causes and Conditions</a> <span class="links">(Anālayo) [T 99.11]</span></li>
         <li>18. <a href="https://suttacentral.net/sa12/en/analayo" target="_blank">Second Discourse on Causes and Conditions</a> <span class="links">(Anālayo) [T 99.12]</span></li>
