--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,9 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>20-Sep-2020</dt>
+  <dd>Translations added:</dd>
+  <dd><a href="01_agama/ksudraka/T765/Iti_2_23.html">Iti 2.23 Searching</a></dd>
   <dt>19-Sep-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="03_samyukta/SA_01/SA1_11.html">SĀ 1.11 Past</a></dd>
