--- a/whats-new.html
+++ b/whats-new.html
@@ -8,7 +8,7 @@ title: Dharma Pearls | What’s New
 <dl class="whats-new">
   <dt>20-Sep-2020</dt>
   <dd>Translations added:</dd>
-  <dd><a href="01_agama/ksudraka/T765/Iti_83.html">Iti 83 Searching</a></dd>
+  <dd><a href="01_agama/ksudraka/T765/Itvr_83.html">Iti 83 The Search</a></dd>
   <dt>19-Sep-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="03_samyukta/SA_01/SA1_11.html">SĀ 1.11 Past</a></dd>
