--- a/whats-new.html
+++ b/whats-new.html
@@ -6,9 +6,13 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>21-Sep-2020</dt>
+  <dd>Translations added:</dd>
+  <dd><a href="03_samyukta/SA_01/SA1_16.html">SĀ 1.16 Teaching Liberation</a></dd>
+  <dd><a href="03_samyukta/SA_01/SA1_17.html">SĀ 1.17 Cause and Condition</a></dd>
   <dt>20-Sep-2020</dt>
   <dd>Translations added:</dd>
-  <dd><a href="01_agama/ksudraka/T765/Itvr_83.html">Iti 83 The Search</a></dd>
+  <dd><a href="01_agama/ksudraka/T765/Itvr_83.html">Itvṛ 83 The Search</a></dd>
   <dt>19-Sep-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="03_samyukta/SA_01/SA1_11.html">SĀ 1.11 Past</a></dd>
