--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>24-Sep-2020</dt>
+  <dd>Translation of <a href="04_ekottarika/EA_24_5.html">EĀ 24.5 Miraculous Transformations</a> added.</dd>
   <dt>21-Sep-2020</dt>
   <dd>Translations added:</dd>
   <dd><a href="03_samyukta/SA_01/SA1_16.html">SĀ 1.16 Teaching Liberation</a></dd>
