--- a/04_ekottarika/index.html
+++ b/04_ekottarika/index.html
@@ -41,7 +41,7 @@ base: ../
       -->
       <li>Chapter 19: Making a Request</li>
       <ul class="toc">
-        <li>1. <a href="EA_19_01.html">Brahmā’s Request</a></li> 
+        <li>1. <a href="EA_19_01.html">Brahmā’s Request</a></li>
         <li>2. <a href="EA_19_02.html">Two Things</a></li>
       </ul>
       <!--
@@ -49,7 +49,12 @@ base: ../
       <li>Chapter 21: Three Treasures</li>
       <li>Chapter 22: Three Offerings</li>
       <li>Chapter 23: Lord of the Earth</li>
-      <li>Chapter 24: Tall Banners</li>
+      -->
+      <li>Chapter 24: Tall Flag</li>
+      <ul class="toc">
+        <li>5. <a href="EA_24_5.html">Miraculous Transformations</a></li>
+      </ul>
+      <!--
       <li>Chapter 25: Four Truths</li>
       <li>Chapter 26: Four Mental Abandonments</li>
       <li>Chapter 27: Common Destination of Four Truths</li>
