--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
 <dl class="whats-new">
+  <dt>27-Sep-2020</dt>
+  <dd>Translation of <a href="04_ekottarika/EA_43_5.html">EĀ 43.5 The Parable of the Raft</a> added.</dd>
   <dt>24-Sep-2020</dt>
   <dd>Translation of <a href="04_ekottarika/EA_24_5.html">EĀ 24.5 Miraculous Transformations</a> added.</dd>
   <dt>21-Sep-2020</dt>
